--- a/README
+++ b/README
@@ -12,8 +12,35 @@ Recipes:
 ["controllers", "core", "email", "extras", "frontend", "gems", "git", "init", "models", "prelaunch", "railsapps", "readme", "routes", "saas", "setup", "testing", "views"]
 
 Preferences:
-{:git=>true, :railsapps=>"rails3-bootstrap-devise-cancan", :database=>"sqlite", :unit_test=>"rspec", :integration=>"cucumber", :fixtures=>"factory_girl", :frontend=>"bootstrap", :bootstrap=>"sass", :email=>"gmail", :authentication=>"devise", :devise_modules=>"default", :authorization=>"cancan", :starter_app=>"admin_app", :form_builder=>"simple_form", :quiet_assets=>true, :local_env_file=>true, :better_errors=>true, :dev_webserver=>"webrick", :templates=>"erb", :rvmrc=>false, :ban_spiders=>true, :jsruntime=>true}
-
+  {
+	:authentication => devise
+	:authorization => cancan
+	:ban_spiders => true
+	:better_errors => true
+	:bootstrap => sass
+	:database => mysql2
+	:dev_webserver => webrick
+	:devise_modules => default
+	:email => gmail
+	:fixtures => factory_girl
+	:form_builder => simple_form
+	:frontend => bootstrap
+	:git => true
+	:integration => cucumber
+	:jsruntime => true
+	:local_env_file => true
+	:quiet_assets => true
+	:railsapps => rails3-bootstrap-devise-cancan
+	:rvmrc => false
+	:starter_app => admin_app
+	:templates => erb
+	:unit_test => rspec
+  }
 ________________________
 
-License
+XJ learn steps:
+
+	1. Learn how to use Devise
+
+
+
