--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Railscomposerapp2
+XJ Note
 ========================
 
 This application was generated with the rails_apps_composer gem:
@@ -8,39 +8,8 @@ http://railsapps.github.com/
 
 ________________________
 
-Recipes:
-["controllers", "core", "email", "extras", "frontend", "gems", "git", "init", "models", "prelaunch", "railsapps", "readme", "routes", "saas", "setup", "testing", "views"]
 
-Preferences:
-  {
-	:authentication => devise
-	:authorization => cancan
-	:ban_spiders => true
-	:better_errors => true
-	:bootstrap => sass
-	:database => mysql2
-	:dev_webserver => webrick
-	:devise_modules => default
-	:email => gmail
-	:fixtures => factory_girl
-	:form_builder => simple_form
-	:frontend => bootstrap
-	:git => true
-	:integration => cucumber
-	:jsruntime => true
-	:local_env_file => true
-	:quiet_assets => true
-	:railsapps => rails3-bootstrap-devise-cancan
-	:rvmrc => false
-	:starter_app => admin_app
-	:templates => erb
-	:unit_test => rspec
-  }
-________________________
 
-XJ learn steps:
-
-	1. Learn how to use Devise
 
 
 
